# RecoMore

./: .gitignore  .gitmodules  CMakeLists.txt  Globals.cpp  Globals.h  LICENSE.txt  README.md  Utils.cpp  Utils.h  main.cpp  utils.cpp  utils.h
.github/unittest-action/: action.yml
.github/workflows/: OSXTest.yml  github-actions-demo.yml
.github/workflows/unittest-action/: action.yml
CReader/: Bindings.cpp  CMakeLists.txt  PythonTypes.py  __init__.py  setup.py  test.py
CReader/bindings/: CMakeLists.txt  __init__.py  cpp_library.cpp
CReader/bindings/_core/: cpp_library.cpp
CReader/include/: DataStructures.h
CReader/src/: DataReading.cpp  cpp_library.cpp
CReader_/: CMakeLists.txt  ManualStub.pyi  PythonTypes.py  README.md  __init__.py  pyproject.toml  setup.py  test.py
CReader_/conda.recipe/: meta.yaml
CReader_/include/: DataReading.h  DataStructures.h
CReader_/src/: DataReading.cpp  DataStructures.cpp  cpp_library.cpp
DebugUtils/: CalibFitter.py  CompareReco.py  FitExaminer.py  GenerateRMFitView.py  GetRecozorList.cc  GetRecozorList.py  PlotChiSqDist.py  PythonRecoMoreReader.py  RecoMoreReader.py
DebugUtils/misc/: CompareReco.py  GetRecozorList.cc  PlotFitWaveform.py  RecozorTypes.h
PEFinder/: CMakeLists.txt  Globals.cpp  Globals.h  README.md  Utils.cpp  main.cpp
PEFinder/include/: DataReading.h  DataStructures.h  DataWriting.h  PEFit.h  PETemplate.h  ThreadPool.h  Utils.h
PEFinder/pdf/: ch1.txt  ch12.txt  ch23.txt  ch25.txt  ch26.txt  ch7.txt  ch8.txt  sic0.txt
PEFinder/src/: DataReading.cpp  DataStructures.cpp  DataWriting.cpp  PEFit.cpp  Utils.cpp
PEFinder/templates/: ch13.txt  ch22.txt  ch27.txt  ch28.txt  ch3.txt  ch45.txt  ch5.txt  ch58.txt
Tests/: CMakeLists.txt  test1.cpp  test_CReader_1.py  test_PEFinder_1.cpp
Tests/TestData/: OLD_R185PES_Reference.dat.OLD
Tests/TestData/pdf/: ch0.txt  ch10.txt  ch14.txt  ch15.txt  ch18.txt  ch19.txt  ch20.txt  ch31.txt  ch33.txt  ch38.txt  ch39.txt  ch42.txt  ch46.txt  ch47.txt  ch51.txt  ch53.txt  ch54.txt  ch6.txt  ch62.txt  ch63.txt  ch9.txt
Tests/TestData/templates/: ch16.txt  ch17.txt  ch24.txt  ch29.txt  ch34.txt  ch4.txt  ch41.txt  ch43.txt  ch50.txt  ch57.txt
include/: DataReading.h  DataStructures.h  DataWriting.h  PEFit.h  ThreadPool.h  argparse.h
pdf/: ch11.txt  ch2.txt  ch21.txt  ch30.txt  ch35.txt  ch37.txt  ch55.txt  ch59.txt  ch61.txt
src/: DataReading.cpp  DataStructures.cpp  DataWriting.cpp  PEFit.cpp
